--- a/app/views/candidatos/index.html.haml
+++ b/app/views/candidatos/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing candidatos
+%h1 Lista de candidatos
 
 %table
   %thead
@@ -26,4 +26,4 @@
 
 %br
 
-= link_to 'New Candidato', new_candidato_path
+= link_to 'Novo Candidato', new_candidato_path
