Mudanças na tela inicial

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -86,9 +86,10 @@
 		            	</div>
 		            	<div class="panel-body">
 			            	<div class="lead">A monitoria é entendida como instrumento para a melhoria do ensino de graduação, através do estabelecimento de novas práticas e experiências pedagógicas que visem fortalecer a articulação entre teoria e prática e a integração curricular em seus diferentes aspectos. Tem como finalidade promover a cooperação mútua entre discentes e docentes e a vivência com o professor e com as suas atividades técnico-didáticas. A monitoria é regida pela resolução <a color: green href="https://legis.cpd.unb.br/LegislacaoFullhit.htw?CiWebHitsFile=%2Fcatlegis%2Flegis%2Fcepe008%2D90%2Edoc&CiRestriction=monitoria&CiBeginHilite=%3Cstrong%2Bclass%3DHit%3E&CiEndHilite=%3C%2Fstrong%3E&CiUserParam3=/index.asp&CiHiliteType=Full">Link</a></div>
-			            	<div class="lead">Existem duas categorias de monitores: a) monitoria remunerada: pagamento feito por bolsa, cujo valor é de R$ 450,00, pago em parcela única no final do semestre após o envio das duas frequências previstas no Calendário Universitário de Graduação; e b) monitoria voluntária: sem compensação financeira pelo exercício da monitoria. Em ambos os casos, os alunos farão juz a 02 (dois) créditos pela atividade no período.</div>
-			            	<div class="lead">Existem duas categorias de monitores: a) monitoria remunerada: pagamento feito por bolsa, cujo valor é de R$ 450,00, pago em parcela única no final do semestre após o envio das duas frequências previstas no Calendário Universitário de Graduação; e b) monitoria voluntária: sem compensação financeira pelo exercício da monitoria. Em ambos os casos, os alunos farão juz a 02 (dois) créditos pela atividade no período.</div>
-		            	</div>
+			            	<div class="lead">Existem duas categorias de monitores: 
+                            <br> a) monitoria remunerada: pagamento feito por bolsa, cujo valor é de R$ 450,00, pago em parcela única no final do semestre após o envio das duas frequências previstas no Calendário Universitário de Graduação;
+                            
+                            <br> b) monitoria voluntária: sem compensação financeira pelo exercício da monitoria. Em ambos os casos, os alunos farão juz a 02 (dois) créditos pela atividade no período.</div>
 					</div>
 					<br>
 					 <div class="panel panel-default nopadding">
