--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -14,10 +14,10 @@
       %tr
         %td= disciplina.codigo
         %td= disciplina.nome
-        %td= link_to 'Show', disciplina
-        %td= link_to 'Edit', edit_disciplina_path(disciplina)
-        %td= link_to 'Destroy', disciplina, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
+        %td= link_to 'Exibir', disciplina
+        %td= link_to 'Editar', edit_disciplina_path(disciplina)
+        %td= link_to 'Remover', disciplina, :method => :delete, :data => { :confirm => 'Are you sure?' }
+S
 %br
 
 = link_to 'Nova Disciplina', new_disciplina_path
