Alterações nas telas de "Tipo de Monitoria"
Mudança dos textos de "Exibir", "Excluir", "Novo", "Editar" para
imagens. Aterações dos títulos e inserção de validações.

closes #10

--- a/app/views/tipos/show.html.haml
+++ b/app/views/tipos/show.html.haml
@@ -1,9 +1,9 @@
 %p#notice= notice
 
 %p
-  %b Descricao:
+  %b Descrição:
   = @tipo.descricao
 
-= link_to 'Edit', edit_tipo_path(@tipo)
+= link_to image_tag('editar.png'), edit_tipo_path(@tipo)
 \|
-= link_to 'Back', tipos_path
+= link_to image_tag('voltar.png'), tipos_path
