--- a/app/views/tipos/edit.html.haml
+++ b/app/views/tipos/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing tipo
+%h1 
 
 = render 'form'
 
-= link_to 'Show', @tipo
-\|
-= link_to 'Back', tipos_path
+= link_to image_tag('voltar.png'), tipos_path
