--- a/app/views/tipos/index.html.haml
+++ b/app/views/tipos/index.html.haml
@@ -1,21 +1,17 @@
-%h1 Listing tipos
-
-%table
+%h1 Tipos de Monitoria Oferecidos
+%table#tipos
   %thead
     %tr
-      %th Descricao
+      %th Descrição
       %th
       %th
-      %th
-
   %tbody
     - @tipos.each do |tipo|
       %tr
         %td= tipo.descricao
-        %td= link_to 'Show', tipo
-        %td= link_to 'Edit', edit_tipo_path(tipo)
-        %td= link_to 'Destroy', tipo, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to image_tag('editar.png'), edit_tipo_path(tipo)
+        %td= link_to image_tag('deletar.png'), tipo, :method => :delete, :data => { :confirm => 'Você realmente deseja remover?' }
 
 %br
 
-= link_to 'New Tipo', new_tipo_path
+= link_to image_tag('adicionar.png'), new_tipo_path
