--- a/app/views/tipos/new.html.haml
+++ b/app/views/tipos/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New tipo
+%h1 Novo tipo de monitoria
 
 = render 'form'
 
-= link_to 'Back', tipos_path
+= link_to image_tag('voltar.png'), tipos_path
