--- a/app/views/candidatos/edit.html.haml
+++ b/app/views/candidatos/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing candidato
+%h1 Editar candidato
 
 = render 'form'
 
-= link_to 'Show', @candidato
-\|
-= link_to 'Back', candidatos_path
+= link_to image_tag('voltar.png'), candidatos_path
