--- a/app/views/ofertas/index.html.haml
+++ b/app/views/ofertas/index.html.haml
@@ -15,7 +15,7 @@
         %td= link_to "#{oferta.turma}", oferta
         -if user_signed_in? #oferta.user == current.user habilita edição e exclusão somente para quem criou a oferta
           %td= link_to image_tag('editar.png'), edit_oferta_path(oferta)
-          %td= link_to image_tag('deletar.png'), oferta, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %td= link_to image_tag('deletar.png'), oferta, :method => :delete, :data => { :confirm => 'Você realmente deseja remover?'}
 %br
 
 = link_to image_tag('adicionar.png'), new_oferta_path
