--- a/app/views/disciplinas/_form.html.haml
+++ b/app/views/disciplinas/_form.html.haml
@@ -1,16 +1,16 @@
 = form_for @disciplina do |f|
   - if @disciplina.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@disciplina.errors.count, "error")} prohibited this disciplina from being saved:"
+      %h2= "#{pluralize(@disciplina.errors.count, "error")} proibiu esta disciplina de ser salva:"
       %ul
         - @disciplina.errors.full_messages.each do |msg|
           %li= msg
 
   .field
-    = f.label :codigo
+    = f.label :codigo, 'Código'
     = f.number_field :codigo
   .field
     = f.label :nome
     = f.text_field :nome
   .actions
-    = f.submit 'Save'
+    = f.submit 'Salvar'
