--- a/app/views/disciplinas/edit.html.haml
+++ b/app/views/disciplinas/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @disciplina
+= link_to 'Mostar', @disciplina
 \|
-= link_to 'Back', disciplinas_path
+= link_to 'Voltar', disciplinas_path
