--- a/app/views/disciplinas/show.html.haml
+++ b/app/views/disciplinas/show.html.haml
@@ -7,6 +7,6 @@
   %b Nome:
   = @disciplina.nome
 
-= link_to 'Edit', edit_disciplina_path(@disciplina)
+= link_to 'Editar', edit_disciplina_path(@disciplina)
 \|
-= link_to 'Back', disciplinas_path
+= link_to 'Voltar', disciplinas_path
