--- a/app/views/candidatos/index.html.haml
+++ b/app/views/candidatos/index.html.haml
@@ -1,30 +1,30 @@
-%h1 Lista de candidatos inscritos
+-if user_signed_in?  
+  %h1 Lista de candidatos inscritos
 
-= form_tag create_multiple_selecionados_path, :method => :post do
-  %table
-    %thead
-      %tr
-        %th 
-        %th Matricula
-        %th Nome
-        %th Semestre
-        %th IRA
-        %th Disciplina
-        %th Turma
-        %th Categoria
-
-    %tbody
-      - @candidatos.each do |candidato|
+  = form_tag create_multiple_selecionados_path, :method => :post do
+    %table
+      %thead
         %tr
-          %td= check_box_tag 'candidato_ids[]', candidato.id
-          %td= link_to "#{candidato.matricula}", candidato
-          %td= link_to "#{candidato.nome}", candidato
-          %td= candidato.semestre
-          %td= candidato.ira
-          %td= link_to "#{candidato.oferta.disciplina.nome}", disciplina_url(candidato.oferta.disciplina)
-          %td= link_to "#{candidato.oferta.turma}", oferta_url(candidato.oferta)
-          %td= candidato.tipo.descricao
-          
-  %br
-  = submit_tag "Selecionar candidatos"
-  
+          %th 
+          %th Matricula
+          %th Nome
+          %th Semestre
+          %th IRA
+          %th Disciplina
+          %th Turma
+          %th Categoria
+
+      %tbody
+        - @candidatos.each do |candidato|
+          %tr
+            %td= check_box_tag 'candidato_ids[]', candidato.id
+            %td= link_to "#{candidato.matricula}", candidato
+            %td= link_to "#{candidato.nome}", candidato
+            %td= candidato.semestre
+            %td= candidato.ira
+            %td= link_to "#{candidato.oferta.disciplina.nome}", disciplina_url(candidato.oferta.disciplina)
+            %td= link_to "#{candidato.oferta.turma}", oferta_url(candidato.oferta)
+            %td= candidato.tipo.descricao
+            
+    %br
+    = submit_tag "Selecionar candidatos"
