Adição de informações na home

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -85,15 +85,14 @@
 		            		<h4>Da Natureza e Finalidades</h4>
 		            	</div>
 		            	<div class="panel-body">
-			            	<div class="lead">A monitoria é entendida como instrumento para a melhoria do ensino de graduação, através do estabelecimento de novas práticas e experiências pedagógicas que visem fortalecer a articulação entre teoria e prática e a integração curricular em seus diferentes aspectos. Tem como finalidade promover a cooperação mútua entre discentes e docentes e a vivência com o professor e com as suas atividades técnico-didáticas. A monitoria é regida pela resolução <a color: green href="https://legis.cpd.unb.br/LegislacaoFullhit.htw?CiWebHitsFile=%2Fcatlegis%2Flegis%2Fcepe008%2D90%2Edoc&CiRestriction=monitoria&CiBeginHilite=%3Cstrong%2Bclass%3DHit%3E&CiEndHilite=%3C%2Fstrong%3E&CiUserParam3=/index.asp&CiHiliteType=Full">Link</a></div>
+			            	<div class="lead">A monitoria é entendida como instrumento para a melhoria do ensino de graduação, através do estabelecimento de novas práticas e experiências pedagógicas que visem fortalecer a articulação entre teoria e prática e a integração curricular em seus diferentes aspectos. Tem como finalidade promover a cooperação mútua entre discentes e docentes e a vivência com o professor e com as suas atividades técnico-didáticas. A monitoria é regida pela resolução <a color: green href="https://legis.cpd.unb.br/LegislacaoFullhit.htw?CiWebHitsFile=%2Fcatlegis%2Flegis%2Fcepe008%2D90%2Edoc&CiRestriction=monitoria&CiBeginHilite=%3Cstrong%2Bclass%3DHit%3E&CiEndHilite=%3C%2Fstrong%3E&CiUserParam3=/index.asp&CiHiliteType=Full">Link</a>.</div>
 			            	<div class="lead">Existem duas categorias de monitores: 
                             <br> a) monitoria remunerada: pagamento feito por bolsa, cujo valor é de R$ 450,00, pago em parcela única no final do semestre após o envio das duas frequências previstas no Calendário Universitário de Graduação;
                             
                             <br> b) monitoria voluntária: sem compensação financeira pelo exercício da monitoria. Em ambos os casos, os alunos farão juz a 02 (dois) créditos pela atividade no período.</div>
 					</div>
-					<br>
 					 <div class="panel panel-default nopadding">
-					 	<div class="bg-success panel-heading ">
+					    <div class="bg-success panel-heading ">
 		 					<h4 align="left">Dos Objetivos</h4>
 		 				</div>
 		 				<div class="panel-body">
@@ -105,10 +104,36 @@
 							<div class="lead">Contribuir, através da formação de monitores de ensino, com a formação de recursos humanos para o ensino superior; e estimular a participação em projetos de ensino, no âmbito da disciplina.</div>
 		            	</div>		 				
 					</div>
-                    &nbsp;
+                    <div class="panel panel-default nopadding">
+                        <div class="bg-success panel-heading ">
+                            <h4>Dos Requisitos para Participação</h4>
+                        </div>
+                        <div class="panel-body">
+                            <div class="lead">Ser aluno regularmente matriculado em curso de graduação da Universidade;</div>
+                            <div class="lead">Ter obtido aprovação na disciplina na qual pleiteia a monitoria, demonstrando domínio da mesma;</div>
+                            <div class="lead">Ter disponibilidade de tempo para atender às atividades programadas;</div>
+                            <div class="lead">Não estar usufruindo de qualquer outro tipo de bolsa remunerada oferecida pela Universidade. (para monitores remunerados).</div>
+                    </div>
+                    <div class="panel panel-default nopadding">
+                        <div class="bg-success panel-heading ">
+                            <h4>Das Seleções dos Candidatos</h4>
+                        </div>
+                        <div class="panel-body">
+                            <div class="lead">A seleção dos estudantes candidatos será de inteira responsabilidade de cada departamentos/institutos;</div>
+                            <div class="lead">Os critérios de avaliação para o exercício das atividades de monitoria serão elaborados pelas coordenações de graduação de cada departamento/instituito;</div>
+                            <div class="lead">O estudante designado monitor será supervisionado pelo professor da disciplina.</div>
+                    </div>
 				</div>
 			</div>
         </div>
     </body>
 </html> 
+&nbsp;
+
+
+
+
+
+
+
 
